tests/solidity-semantic-tests/out/errors/require_error_evaluation_order_3/C.approval.teal
#pragma version 12
#pragma typetrack false

// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_evaluation_order_3.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0
    bytecblock "failureMessage"
    pushint 4096
    bzero
    dup
    store 5
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn ApplicationID
    bnz main_after_if_else@2
    bytec_0 // "failureMessage"
    pushbytes "Failure Message"
    app_global_put
    intc_0 // 1
    return

main_after_if_else@2:
    pushbytes 0x74c48465 // method "f(bool)void"
    txna ApplicationArgs 0
    match main_f_route@4
    err

main_f_route@4:
    txn OnCompletion
    !
    txn ApplicationID
    &&
    assert
    b f


// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_evaluation_order_3.sol.C.f[routing]() -> void:
f:
    txna ApplicationArgs 1
    dup
    len
    intc_0 // 1
    ==
    assert // invalid number of bytes for arc4.bool
    intc_1 // 0
    getbit
    txn GroupIndex
    bz f_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

f_ternary_merge@4:
    !
    assert // not payable
    dupn 2
    intc_0 // 1
    <=
    assert // ABI bool validation
    bytec_0 // "failureMessage"
    pushbytes "Intercepted failure message"
    app_global_put
    assert // h
    intc_0 // 1
    return

f_ternary_false@3:
    intc_1 // 0
    b f_ternary_merge@4
